<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/tv_settings_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/search_settings_title_text"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"

        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start|top"
        app:layout_constraintBottom_toTopOf="@id/tv_looking_for"
        app:layout_constraintEnd_toStartOf="@id/ib_settings_close"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />


    <ImageButton
        android:id="@+id/ib_settings_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginEnd="16dp"


        android:background="@color/transparent"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_settings_title"
        app:layout_constraintTop_toTopOf="@id/tv_settings_title"
        app:layout_constraintStart_toEndOf="@id/tv_settings_title"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_looking_for"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        android:text="@string/search_settings_musician_type_text"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title"
        android:gravity="start|top"
        app:layout_constraintBottom_toTopOf="@id/flow_chips_filter"
        app:layout_constraintEnd_toEndOf="@id/guideline_end" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_chips_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:constraint_referenced_ids="chip_bassguitar_player,chip_brass,chip_drummer,chip_guitar_player,chip_keyboard,chip_violin,chip_vocalist"
        app:flow_horizontalBias="0"
        app:flow_horizontalGap="4dp"
        app:flow_horizontalStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:flow_verticalStyle="spread_inside"
        app:flow_wrapMode="chain"
        app:layout_constraintTop_toBottomOf="@id/tv_looking_for">

    </androidx.constraintlayout.helper.widget.Flow>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_guitar_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guitar_player"

        tools:checked="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_bassguitar_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/bassguitar_player" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_drummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/drummer_player" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_keyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyboard_player"

        tools:checked="true" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_brass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/brass_player" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_violin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/violin_player" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_vocalist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/vocalist_player" />

    <TextView
        android:id="@+id/tv_search_radius"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/search_settings_radius"
        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:gravity="start|top"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/flow_chips_filter" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sl_search_range"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:valueFrom="0"
        android:valueTo="100"

        app:labelBehavior="gone"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_search_radius"
        tools:value="50" />


</androidx.constraintlayout.widget.ConstraintLayout>